# iDISCO-Prep

./: .gitignore  README.md  add_ome_to_tiffs.py  aggregate_ome_tiffs.py  conversion.py  conversion_cli.py  convert_atlas_to_dseg.py  convert_seg_counts.py  data_README.md  dataset_description.json  dev.in  dev.txt  dseg.tsv  hash_compare.py  parse_sample_information.py  participants.py  pyproject.toml  requirements.in  requirements.txt
