[project]
name = "idisco-ome-zarr"
version = "0.1.0"
description = "Convert derivative tiff stacks from iDISCO analysis to ome-zarr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dandi>=0.67.0",
    "dask>=2024.12.1",
    "matplotlib>=3.10.0",
    "napari-ome-zarr>=0.6.1",
    "napari[all]>=0.5.5",
    "ome-zarr>=0.10.3",
    "pandas>=2.2.3",
    "scikit-image>=0.25.0",
    "zarr>=2.18.4",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
]
